--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "5.3.0",
+    "chart.js": "^4.4.3",
     "next": "14.2.4",
     "react": "^18",
     "react-bootstrap": "2.8.0",
     "react-dom": "^18",
+    "react-toastify": "9.1.3",
     "swr": "2.2.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "nodemon": "^3.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
